--- a/ui/package.json
+++ b/ui/package.json
@@ -8,16 +8,28 @@
     "url": "."
   },
   "scripts": {
-    "build": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --env production",
-    "build-dev": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --env development",
-    "dev": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --progress --colors --watch --env development"
+    "build": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --mode production",
+    "build-dev": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --mode development",
+    "dev": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --progress --colors --watch --mode development"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^4.1.3"
+  },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.2"
+    "style-loader": "^0.21.0",
+    "css-loader": "^1.0.0",
+    "sass-loader": "^7.0.3",
+    "node-sass": "^4.9.2",
+    "postcss-loader": "^2.1.6",
+    "file-loader": "^1.1.11",
+    "mini-css-extract-plugin": "^0.4.1",
+    "precss": "^3.1.2",
+    "autoprefixer": "^9.0.1",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.5"
   }
 }
