--- a/api/composer.json
+++ b/api/composer.json
@@ -5,14 +5,18 @@
     "php": "^7.1.3",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "eightpoints/guzzle-bundle": "^7.3",
+    "symfony/apache-pack": "^1.0",
     "symfony/console": "^4.1",
     "symfony/flex": "^1.0",
     "symfony/framework-bundle": "^4.1",
     "symfony/lts": "^4@dev",
+    "symfony/twig-bundle": "^4.1",
     "symfony/yaml": "^4.1"
   },
   "require-dev": {
-    "symfony/dotenv": "^4.1"
+    "symfony/dotenv": "^4.1",
+    "symfony/var-dumper": "^4.1"
   },
   "config": {
     "preferred-install": {
@@ -54,7 +58,7 @@
   },
   "extra": {
     "symfony": {
-      "allow-contrib": false
+      "allow-contrib": true
     }
   }
 }
