--- a/api/config/routes.yaml
+++ b/api/config/routes.yaml
@@ -1,3 +1,6 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+login:
+    path: /fetch_token/{code}/{state}
+    controller: App\Controller\LoginController::fetchToken
+    defaults:
+          _format: json
+    methods:    [GET]
