--- a/ui/package.json
+++ b/ui/package.json
@@ -8,14 +8,28 @@
     "url": "."
   },
   "scripts": {
-    "build": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --mode production",
-    "build-dev": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --mode development",
-    "dev": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --progress --colors --watch --mode development"
+    "build": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --mode=production",
+    "build-dev": "./node_modules/.bin/webpack --config webpack.config.js --progress --colors  --mode=development",
+    "dev": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --progress --colors --watch --mode=development"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3"
+    "bootstrap": "^4.1.3",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-hot-loader": "^4.3.4",
+    "react-redux": "^5.0.7",
+    "react-router": "^3.2.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.0",
+    "redux-api-middleware": "^2.3.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "html-webpack-plugin": "^3.2.0",
