--- a/api/composer.json
+++ b/api/composer.json
@@ -6,6 +6,7 @@
     "ext-ctype": "*",
     "ext-iconv": "*",
     "eightpoints/guzzle-bundle": "^7.3",
+    "nelmio/cors-bundle": "^1.5",
     "symfony/apache-pack": "^1.0",
     "symfony/console": "^4.1",
     "symfony/flex": "^1.0",
