--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,10 @@
     "dev": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --progress --colors --watch --mode=development"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "query-string": "^6.1.0",
+    "random-string": "^0.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
