--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "query-string": "^6.1.0",
     "random-string": "^0.2.0",
     "react": "^16.4.2",
