--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "parse-link-header": "^1.0.1",
     "query-string": "^6.1.0",
     "random-string": "^0.2.0",
     "react": "^16.4.2",
