--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
+    "react-moment": "^0.7.9",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-router-redux": "^4.0.8",
