--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
@@ -40,16 +41,16 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.21.0",
     "css-loader": "^1.0.0",
-    "sass-loader": "^7.0.3",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "icon-font-generator": "^2.1.8",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
-    "file-loader": "^1.1.11",
-    "mini-css-extract-plugin": "^0.4.1",
     "precss": "^3.1.2",
-    "autoprefixer": "^9.0.1",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.5"
