--- a/ui/docker/docker-compose.yml
+++ b/ui/docker/docker-compose.yml
@@ -5,6 +5,12 @@ services:
     build:
       context: ./node
       dockerfile: Dockerfile.dev
+    environment:
+      ROOTURL: ${ROOTURL}
+      APIURL: ${APIURL}
+      GITHUB_URL: ${GITHUB_URL}
+      GITHUB_API_URL: ${GITHUB_API_URL}
+      CLIENT_ID: ${CLIENT_ID}
     working_dir: /var/www/
     container_name: fullstack-party-ui
     ports:
