--- a/ui/docker/node/Dockerfile
+++ b/ui/docker/node/Dockerfile
@@ -1,13 +1,19 @@
 FROM node:latest as builder
 
+ARG ROOTURL
+ARG APIURL
+ARG GITHUB_URL
+ARG GITHUB_API_URL
+ARG CLIENT_ID
 ENV NPM_CONFIG_LOGLEVEL warn
 
-WORKDIR /var/www/html
-COPY . /var/www/html
-RUN npm install --silent
+WORKDIR /var/www
+COPY . /var/www
+
+RUN npm install
 RUN npm run build
 
 FROM nginx:1.13.9-alpine
-COPY --from=builder /var/www/html/dist /usr/share/nginx/html
+COPY --from=builder /var/www/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
