--- a/ui/docker/docker-compose.dev.yml
+++ b/ui/docker/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: '2'
 
 services:
-  fullstack-party-ui:
+  fullstack-party-ui-dev:
     build:
       context: ./node
       dockerfile: Dockerfile.dev
@@ -12,7 +12,7 @@ services:
       GITHUB_API_URL: ${GITHUB_API_URL}
       CLIENT_ID: ${CLIENT_ID}
     working_dir: /var/www/
-    container_name: fullstack-party-ui
+    container_name: fullstack-party-ui-dev
     ports:
       - '2201:2201'
     volumes:
